--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -4,20 +4,22 @@ on:
   push:
     branches:
       - develop
-      - main
-  pull_request:
-    branches:
-      - develop
-      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout código
         uses: actions/checkout@v4
-
+      - name: Docker login
+        uses: docker/login-action@v3.3.0
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }} 
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Configurar Java 23
         uses: actions/setup-java@v3
         with:
@@ -26,4 +28,18 @@ jobs:
           cache: maven
 
       - name: Construir e testar aplicação
-        run: mvn clean verify
+        run: mvn clean package
+      - name: Build docker image
+        run: docker build -t washington1995luiz/simplecicd .
+      - name: Push image docker
+        run: docker push washington1995luiz/simplecicd
+  deploy: 
+    needs: build
+    runs-on: self-hosted
+    steps:
+      - name: Pull image from docker hub
+        run: docker pull washington1995luiz/simplecicd:latest
+      - name: Remove docker container
+        run: docker rm -f simplecicd
+      - name: Run docker container
+        run: docker run -d -p 8080:8080 --name simplecicd washington1995luiz/simplecicd
