--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -38,8 +38,8 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Pull image from docker hub
-        run: docker pull washington1995luiz/simplecicd:latest
+        run: sudo docker pull washington1995luiz/simplecicd:latest
       - name: Remove docker container
-        run: docker rm -f simplecicd
+        run: sudo docker rm -f simplecicd
       - name: Run docker container
-        run: docker run -d -p 8080:8080 --name simplecicd washington1995luiz/simplecicd
+        run: sudo docker run -d -p 8080:8080 --name simplecicd washington1995luiz/simplecicd
